src/objects/Missed_Opportunitiy__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Missed Opportunities</relationshipLabel>
        <relationshipName>Missed_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deposition_Date__c</fullName>
        <label>Deposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <label>Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reporter Shortage</fullName>
                    <default>true</default>
                    <label>Reporter Shortage</label>
                </value>
                <value>
                    <fullName>Last Minute Call-in</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Missed Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Missed Opportunity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missed Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>